Overlapping Text Fixes (https://app.clickup.com/t/2219993/AND-110)

--- a/src/assets/scss/00_base/_root.scss
+++ b/src/assets/scss/00_base/_root.scss
@@ -21,7 +21,7 @@ address {
 }
 
 .-push-one {
-@include span-col(12);
+    @include span-col(12);
 
     @include breakpoints("tablet") {
         @include span-col(8);
@@ -34,7 +34,7 @@ address {
     @include breakpoints("tablet") {
         @include push-col(3);
     }
-  }
+}
 
 .-phone-only {
     display: block;
@@ -71,7 +71,7 @@ address {
 .-desktop-only {
     display: none;
 
-    @include breakpoints("tablet") {
+    @include breakpoints("desktop") {
         display: block;
     }
 }
